--- a/mission2RyanPinkney/mission2RyanPinkney.csproj
+++ b/mission2RyanPinkney/mission2RyanPinkney.csproj
@@ -21,5 +21,17 @@
     <Folder Include="wwwroot\lib\jquery\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\bootstrap\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Views\" />
+    <Folder Include="Models\" />
+    <Folder Include="Views\Main\" />
+    <Folder Include="Views\Shared\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Controllers\" />
+    <None Remove="Views\" />
+    <None Remove="Models\" />
+    <None Remove="Views\Main\" />
+    <None Remove="Views\Shared\" />
   </ItemGroup>
 </Project>
